task/86enxxzmg Stockist

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'components/svgs';
 @import 'components/accordion';
 @import 'components/modal';
+@import 'components/custom-forms';
 // @import 'components/cookie-banner';
 // @import 'components/announcement-bar';
 // @import 'components/dropdown';
@@ -51,7 +52,7 @@
 // @import 'templates/article';
 // @import 'templates/blog';
 // @import 'templates/collection';
-// @import 'templates/stockist';
+@import 'templates/stockist';
 // @import 'templates/sustainability';
 // @import 'templates/sweepstakes';
 // @import 'templates/our-story';
