--- a/src/styles/components/_custom-forms.scss
+++ b/src/styles/components/_custom-forms.scss
@@ -1,115 +1,9 @@
-.custom-control-input:checked ~ .custom-control-label::before {
-  border-color: $primary;
-  background-color: $primary;
-}
-
-.custom-control-input {
-  position: absolute;
-  left: 0;
-  z-index: -1;
-  width: 1.25em;
-  height: 1.25em;
-  opacity: 0;
-}
-
-.custom-radio {
-  .custom-control-input:checked ~ .custom-control-label {
-    &::before {
-      background-color: $primary;
-    }
-  }
-
-  .custom-control-label::before {
-    border-radius: 50%;
-  }
-}
-
-.custom-control-label {
-  position: relative;
-
-  &::before {
-    border-radius: 0.25rem;
-    position: absolute;
-    top: 0em;
-    left: -1.75em;
-    display: block;
-    width: 1.25em;
-    height: 1.25em;
-    pointer-events: none;
-    content: "";
-    background-color: #fff;
-    border: #fff solid 1px;
-  }
-
-  &::after {
-    width: $custom-switch-indicator-size-height;
-    height: $custom-switch-indicator-size-height;
-    top: 0;
-    left: -($custom-switch-width + $custom-control-gutter);
-  }
-}
-
-.custom-switch {
-    padding-left: $custom-switch-width;
-    height: $custom-switch-indicator-size-height;
-
-    .custom-control-input {
-      position: absolute;
-      left: 0;
-      z-index: -1;
-      width: 1.25em;
-      height: 1.25em;
-      opacity: 0;
-    }
-
-    .custom-control-label {
-      position: relative;
-      margin-bottom: 0;
-      vertical-align: top;
-
-      &::before {
-        position: absolute;
-        top: 0em;
-        display: block;
-        content: "";
-        pointer-events: all;
-        border-radius: 2em;
-      }
-
-      &::after {
-        position: absolute;
-        background-color: #fff;
-        border-radius: 2em;
-        transition: transform 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
-        width: 2.625em;
-        height: 2.625em;
-        top: 0;
-        left: -5.625em;
-        border: 1px solid #f5f5f5;
-      }
-
-      &::before,
-      &::after {
-        text-align: center;
-        line-height: $custom-switch-indicator-size-height;
-      }
-    }
-
-    .custom-control-input ~ .custom-control-label {
-      &::after {
-        content: 'Off';
-      }
-    }
-
-    .custom-control-input:checked ~ .custom-control-label {
-      &::before {
-        background-color: $bali-bod-blue;
-      }
-
-      &::after {
-        content: 'On';
-        transform: translateX(2.5em);
-      }
+@layer components {
+  .custom-select {
+    @apply bg-gray-400;
+    @apply border-body-color;
+    &:focus {
+      @apply border-body-color;
     }
   }
 
@@ -124,9 +18,10 @@
     color: #151515;
     vertical-align: middle;
     background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22.6 22.6'%3e%3cpath d='M1.9 5.4l9.4 9.4 9.4-9.4 1.9 1.9-11.3 11.3L0 7.3l1.9-1.9z'/%3e%3c/svg%3e") right 1em center/1em .5625em no-repeat;
-    border: 1px solid $gray-400;
+    border: 1px solid #f5f5f5;
+    @apply border-body-color;
     border-radius: 0.25rem;
-    background-color: $gray-400;
+    @apply bg-gray-400;
     -webkit-appearance: none;
     -moz-appearance: none;
     text-indent: 1px;
@@ -136,36 +31,183 @@
     }
 
     &.disabled {
-      color: $gray-400;
-      background-color: $gray-100;
+      @apply text-gray-400;
+      @apply bg-gray-100;
     }
 
     &:focus-visible {
       outline: 0;
     }
   }
-
-  .custom-control {
-    position: relative;
-    z-index: 1;
-    display: block;
-    min-height: 1.25em;
-    padding-left: 1.75em;
-  }
-
-  .custom-control-label::after {
-    position: absolute;
-    top: 0em;
-    left: -1.75em;
-    display: block;
-    width: 1.25em;
-    height: 1.25em;
-    content: "";
-    background: 50% / 50% 50% no-repeat;
-  }
-
-  .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
-    background-image: url('data:image/svg+xml;utf8,<svg role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 25" height="1em"><path fill="%23D62E55" d="M28.82.543c.382-.014.752.14 1.012.421.571.615.604 1.556.076 2.208L12.436 23.97a1.312 1.312 0 01-1.992.072 1.693 1.693 0 01-.167-.21 1.578 1.578 0 01-.138-.127L1.127 14.38a1.621 1.621 0 112.33-2.253l8.058 8.335L27.84 1.04c.239-.3.596-.481.98-.496z"></path></svg>');
-    background-size: 70%;
-    background-position: center;
 }
+// .custom-control-input:checked ~ .custom-control-label::before {
+//   border-color: $primary;
+//   background-color: $primary;
+// }
+
+// .custom-control-input {
+//   position: absolute;
+//   left: 0;
+//   z-index: -1;
+//   width: 1.25em;
+//   height: 1.25em;
+//   opacity: 0;
+// }
+
+// .custom-radio {
+//   .custom-control-input:checked ~ .custom-control-label {
+//     &::before {
+//       background-color: $primary;
+//     }
+//   }
+
+//   .custom-control-label::before {
+//     border-radius: 50%;
+//   }
+// }
+
+// .custom-control-label {
+//   position: relative;
+
+//   &::before {
+//     border-radius: 0.25rem;
+//     position: absolute;
+//     top: 0em;
+//     left: -1.75em;
+//     display: block;
+//     width: 1.25em;
+//     height: 1.25em;
+//     pointer-events: none;
+//     content: "";
+//     background-color: #fff;
+//     border: #fff solid 1px;
+//   }
+
+//   &::after {
+//     width: $custom-switch-indicator-size-height;
+//     height: $custom-switch-indicator-size-height;
+//     top: 0;
+//     left: -($custom-switch-width + $custom-control-gutter);
+//   }
+// }
+
+// .custom-switch {
+//     padding-left: $custom-switch-width;
+//     height: $custom-switch-indicator-size-height;
+
+//     .custom-control-input {
+//       position: absolute;
+//       left: 0;
+//       z-index: -1;
+//       width: 1.25em;
+//       height: 1.25em;
+//       opacity: 0;
+//     }
+
+//     .custom-control-label {
+//       position: relative;
+//       margin-bottom: 0;
+//       vertical-align: top;
+
+//       &::before {
+//         position: absolute;
+//         top: 0em;
+//         display: block;
+//         content: "";
+//         pointer-events: all;
+//         border-radius: 2em;
+//       }
+
+//       &::after {
+//         position: absolute;
+//         background-color: #fff;
+//         border-radius: 2em;
+//         transition: transform 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+//         width: 2.625em;
+//         height: 2.625em;
+//         top: 0;
+//         left: -5.625em;
+//         border: 1px solid #f5f5f5;
+//       }
+
+//       &::before,
+//       &::after {
+//         text-align: center;
+//         line-height: $custom-switch-indicator-size-height;
+//       }
+//     }
+
+//     .custom-control-input ~ .custom-control-label {
+//       &::after {
+//         content: 'Off';
+//       }
+//     }
+
+//     .custom-control-input:checked ~ .custom-control-label {
+//       &::before {
+//         background-color: $bali-bod-blue;
+//       }
+
+//       &::after {
+//         content: 'On';
+//         transform: translateX(2.5em);
+//       }
+//     }
+//   }
+
+//   .custom-select {
+//     display: inline-block;
+//     width: 100%;
+//     height: 3.125rem;
+//     padding: .875em 2em 0.875em 1em;
+//     font-size: 1em;
+//     font-weight: 400;
+//     line-height: 1.25;
+//     color: #151515;
+//     vertical-align: middle;
+//     background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22.6 22.6'%3e%3cpath d='M1.9 5.4l9.4 9.4 9.4-9.4 1.9 1.9-11.3 11.3L0 7.3l1.9-1.9z'/%3e%3c/svg%3e") right 1em center/1em .5625em no-repeat;
+//     border: 1px solid $gray-400;
+//     border-radius: 0.25rem;
+//     background-color: $gray-400;
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     text-indent: 1px;
+
+//     &.custom-select-filter {
+//       width: 40%;
+//     }
+
+//     &.disabled {
+//       color: $gray-400;
+//       background-color: $gray-100;
+//     }
+
+//     &:focus-visible {
+//       outline: 0;
+//     }
+//   }
+
+//   .custom-control {
+//     position: relative;
+//     z-index: 1;
+//     display: block;
+//     min-height: 1.25em;
+//     padding-left: 1.75em;
+//   }
+
+//   .custom-control-label::after {
+//     position: absolute;
+//     top: 0em;
+//     left: -1.75em;
+//     display: block;
+//     width: 1.25em;
+//     height: 1.25em;
+//     content: "";
+//     background: 50% / 50% 50% no-repeat;
+//   }
+
+//   .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
+//     background-image: url('data:image/svg+xml;utf8,<svg role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 25" height="1em"><path fill="%23D62E55" d="M28.82.543c.382-.014.752.14 1.012.421.571.615.604 1.556.076 2.208L12.436 23.97a1.312 1.312 0 01-1.992.072 1.693 1.693 0 01-.167-.21 1.578 1.578 0 01-.138-.127L1.127 14.38a1.621 1.621 0 112.33-2.253l8.058 8.335L27.84 1.04c.239-.3.596-.481.98-.496z"></path></svg>');
+//     background-size: 70%;
+//     background-position: center;
+// }
