task/86enxxzga Blog Filtered

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -1,235 +1,238 @@
-.blog-grid {
-	@include media-breakpoint-up(lg) {
-		display: grid !important;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: auto auto auto;
-		grid-template-areas: "post1 post1 search"
-			"post1 post1 sidebar"
-			"post2 post3 sidebar"
-			"postall postall sidebar";
-	}
-
-	&__search {
-		grid-area: search;
-		input {
-			height: calc(1.21429em + 1.07143em + 2px);
+@layer components {
+	.blog-grid {
+		@screen lg {
+			display: grid !important;
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-rows: auto auto auto;
+			grid-template-areas: "post1 post1 search"
+				"post1 post1 sidebar"
+				"post2 post3 sidebar"
+				"postall postall sidebar";
 		}
-	}
 
-	&__post1 {
-		grid-area: post1;
-	}
-
-	&__post2 {
-		grid-area: post2;
-	}
-
-	&__post3 {
-		grid-area: post3;
-	}
-
-	&__sidebar {
-		grid-area: sidebar;
-		top: 0;
-		z-index: $zindex-dropdown;
-
-		aside {
-			@include media-breakpoint-up(lg) {
-				top: 0;
+		&__search {
+			grid-area: search;
+			input {
+				height: calc(1.21429em + 1.07143em + 2px);
+				margin-bottom: 0;
 			}
 		}
-	}
 
-	.nav-link {
-		&.active,
-		&:hover {
-			text-decoration: underline;
+		&__post1 {
+			grid-area: post1;
 		}
-	}
-}
 
-.blog-post-grid {
-	@include media-breakpoint-up(lg) {
-		display: grid !important;
-		grid-template-columns: 2fr 1fr;
-		grid-template-rows: auto auto;
-		grid-template-areas: "content sidebar"
-			"comment sidebar";
-	}
+		&__post2 {
+			grid-area: post2;
+		}
 
-	&__content {
-		grid-area: content;
-	}
+		&__post3 {
+			grid-area: post3;
+		}
 
-	&__comment {
-		grid-area: comment;
-	}
-
-	&__sidebar {
-		grid-area: sidebar;
-
-		@include media-breakpoint-up(lg) {
+		&__sidebar {
+			grid-area: sidebar;
 			top: 0;
-		}
-	}
+			z-index: 1000;
 
-	.blog-post-grid__newsletter {
-
-		.form-control {
-			border-radius: $border-radius-lg;
-		}
-
-		.input-group-append .btn {
-			border-top-right-radius: $border-radius-lg;
-			border-bottom-right-radius: $border-radius-lg;
-		}
-	}
-
-	&__shop-articles {
-		.carousel-control-prev-icon, .carousel-control-next-icon {
-			top: 28%;
-			background-color: $pink-light;
+			aside {
+				@screen lg {
+					top: 0;
+				}
+			}
 		}
 
-		.carousel-control-prev-icon {
-			left: calc-em(25);
-		}
-
-		.carousel-control-next-icon {
-			right: calc-em(25);
-		}
-
-		.carousel--centered .carousel-inner {
-			@include media-breakpoint-up(lg) {
-				transform: translateX(0);
+		.nav-link {
+			&.active,
+			&:hover {
+				text-decoration: underline;
 			}
 		}
 	}
 
-	&__recomendation {
-		article {
-			height: 100%;
-		}
+	// .blog-post-grid {
+	// 	@screen lg {
+	// 		display: grid !important;
+	// 		grid-template-columns: 2fr 1fr;
+	// 		grid-template-rows: auto auto;
+	// 		grid-template-areas: "content sidebar"
+	// 			"comment sidebar";
+	// 	}
 
-		@include media-breakpoint-down(lg) {
-			background-color: white !important;
-		}
-	}
-}
+	// 	&__content {
+	// 		grid-area: content;
+	// 	}
 
-.article__content {
-	img, iframe {
-		max-width: 100%;
-	}
+	// 	&__comment {
+	// 		grid-area: comment;
+	// 	}
 
-	@include media-breakpoint-down(md) {
-		img {
-			height: auto;
-		}
-	}
+	// 	&__sidebar {
+	// 		grid-area: sidebar;
 
-	&__banner {
-		width: 100%;
+	// 		@screen lg {
+	// 			top: 0;
+	// 		}
+	// 	}
 
-		@include media-breakpoint-up(lg) {
-			width: auto;
-		}
-	}
-}
+	// 	.blog-post-grid__newsletter {
 
-.badge-blog {
-	line-height: calc-em(20, 16) !important;
-	padding: calc-em(2) calc-em(8) !important;
-}
+	// 		.form-control {
+	// 			border-radius: $border-radius-lg;
+	// 		}
 
-.blog-nav-tags {
-	margin-bottom: calc-em(50, $unit: 1rem);
-	overflow-x: scroll;
-	width: auto;
+	// 		.input-group-append .btn {
+	// 			border-top-right-radius: $border-radius-lg;
+	// 			border-bottom-right-radius: $border-radius-lg;
+	// 		}
+	// 	}
 
-	@include media-breakpoint-up(lg) {
-		justify-content: center;
-	}
+	// 	&__shop-articles {
+	// 		.carousel-control-prev-icon, .carousel-control-next-icon {
+	// 			top: 28%;
+	// 			background-color: $pink-light;
+	// 		}
 
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	// 		.carousel-control-prev-icon {
+	// 			left: calc-em(25);
+	// 		}
 
-	a {
-		background-color: $gray-400;
-		border-radius: calc-em(20);
-		white-space: nowrap;
-		cursor: pointer;
-		color: $body-color;
+	// 		.carousel-control-next-icon {
+	// 			right: calc-em(25);
+	// 		}
 
-		&.active {
-			background-color: $primary;
-			color: $white;
-		}
-	}
+	// 		.carousel--centered .carousel-inner {
+	// 			@screen lg {
+	// 				transform: translateX(0);
+	// 			}
+	// 		}
+	// 	}
 
-}
+	// 	&__recomendation {
+	// 		article {
+	// 			height: 100%;
+	// 		}
 
-.how-to-wrapper {
-	figure svg {
-		left: 0;
-		right: 0;
-		margin: auto;
-		top: 0;
-		bottom: 0;
-		width: calc-em(52);
-		height: calc-em(52);
+	// 		@include media-breakpoint-down(lg) {
+	// 			background-color: white !important;
+	// 		}
+	// 	}
+	// }
 
-		@include media-breakpoint-up(lg) {
-			width: calc-em(64);
-			height: calc-em(64);
-		}
-	}
+	// .article__content {
+	// 	img, iframe {
+	// 		max-width: 100%;
+	// 	}
 
-	.list-unstyled figure svg {
-		width: calc-em(52);
-		height: calc-em(52);
-	}
-}
+	// 	@include media-breakpoint-down(md) {
+	// 		img {
+	// 			height: auto;
+	// 		}
+	// 	}
 
-.blog-post-quick-links {
-	color: $body-color;
-	border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
-	&:hover {
-		text-decoration: none;
-	}
-	& + .blog-post-quick-links {
-		&::before {
-			content: '|';
-			float: none;
-		}
-	}
-}
+	// 	&__banner {
+	// 		width: 100%;
 
-.blog-back-to-top {
-	position: fixed;
-	bottom: calc-em(20);
-	right: calc-em(15);
-	cursor: pointer;
-	z-index: $zindex-dropdown;
-	opacity: 0;
-	transition: opacity 0.4s ease-in;
-	display: none;
+	// 		@screen lg {
+	// 			width: auto;
+	// 		}
+	// 	}
+	// }
 
-	@include media-breakpoint-up(lg) {
-		right: calc-em(40);
-	}
+	// .badge-blog {
+	// 	line-height: calc-em(20, 16) !important;
+	// 	padding: calc-em(2) calc-em(8) !important;
+	// }
 
-	&:hover {
-		color: $primary;
-	}
+	// .blog-nav-tags {
+	// 	margin-bottom: calc-em(50, $unit: 1rem);
+	// 	overflow-x: scroll;
+	// 	width: auto;
 
-	&.btn--show {
-		opacity: 1;
-		display: flex;
-	}
+	// 	@screen lg {
+	// 		justify-content: center;
+	// 	}
 
-	.svg {
-		font-size: calc-em(40);
-	}
+	// 	&::-webkit-scrollbar {
+	// 		display: none;
+	// 	}
+
+	// 	a {
+	// 		background-color: $gray-400;
+	// 		border-radius: calc-em(20);
+	// 		white-space: nowrap;
+	// 		cursor: pointer;
+	// 		color: $body-color;
+
+	// 		&.active {
+	// 			background-color: $primary;
+	// 			color: $white;
+	// 		}
+	// 	}
+
+	// }
+
+	// .how-to-wrapper {
+	// 	figure svg {
+	// 		left: 0;
+	// 		right: 0;
+	// 		margin: auto;
+	// 		top: 0;
+	// 		bottom: 0;
+	// 		width: calc-em(52);
+	// 		height: calc-em(52);
+
+	// 		@screen lg {
+	// 			width: calc-em(64);
+	// 			height: calc-em(64);
+	// 		}
+	// 	}
+
+	// 	.list-unstyled figure svg {
+	// 		width: calc-em(52);
+	// 		height: calc-em(52);
+	// 	}
+	// }
+
+	// .blog-post-quick-links {
+	// 	color: $body-color;
+	// 	border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
+	// 	&:hover {
+	// 		text-decoration: none;
+	// 	}
+	// 	& + .blog-post-quick-links {
+	// 		&::before {
+	// 			content: '|';
+	// 			float: none;
+	// 		}
+	// 	}
+	// }
+
+	// .blog-back-to-top {
+	// 	position: fixed;
+	// 	bottom: calc-em(20);
+	// 	right: calc-em(15);
+	// 	cursor: pointer;
+	// 	z-index: $zindex-dropdown;
+	// 	opacity: 0;
+	// 	transition: opacity 0.4s ease-in;
+	// 	display: none;
+
+	// 	@screen lg {
+	// 		right: calc-em(40);
+	// 	}
+
+	// 	&:hover {
+	// 		color: $primary;
+	// 	}
+
+	// 	&.btn--show {
+	// 		opacity: 1;
+	// 		display: flex;
+	// 	}
+
+	// 	.svg {
+	// 		font-size: calc-em(40);
+	// 	}
+	// }
 }
