--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,7 +50,7 @@
 // @import 'sections/yotpo-widget';
 
 // @import 'templates/article';
-// @import 'templates/blog';
+@import 'templates/blog';
 // @import 'templates/collection';
 @import 'templates/stockist';
 // @import 'templates/sustainability';
