task/86enxxznt Sweepstakes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,7 +20,7 @@
 @import 'components/swatch';
 // @import 'components/article-proggress-bar';
 // @import 'components/badge';
-// @import 'components/list';
+@import 'components/list';
 // @import 'components/product-subscription';
 
 // @import 'compounds/post-card';
