--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -15,6 +15,12 @@
 	}
 }
 
+@layer utilities {
+	.no-underline {
+		text-decoration: none;
+	}
+}
+
 @layer components {
 	.bg-select-arrow {
 		background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 22.6 22.6'%3e%3cpath d='M1.9 5.4l9.4 9.4 9.4-9.4 1.9 1.9-11.3 11.3L0 7.3l1.9-1.9z'/%3e%3c/svg%3e") right 1em center/1em .5625em no-repeat;
