--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,7 +21,7 @@
 // @import 'components/article-proggress-bar';
 // @import 'components/badge';
 @import 'components/list';
-// @import 'components/product-subscription';
+@import 'components/product-subscription';
 
 // @import 'compounds/post-card';
 // @import 'compounds/image-with-text';
