--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -13,7 +13,7 @@
 		&__search {
 			grid-area: search;
 			input {
-				height: calc(1.21429em + 1.07143em + 2px);
+				// height: calc(1.21429em + 1.07143em + 2px);
 				margin-bottom: 0;
 			}
 		}
