task/86ep0xf2v Nav Category

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -4,10 +4,12 @@
 
 		&:not(.link-search) {
 
-			&.active,
-			&:hover {
-				@apply text-primary;
+			&.active {
+				@apply text-body-color;
+			}
 
+			&:hover {
+				text-decoration: none;
 				path {
 					@apply text-primary;
 				}
