[86ep0xetf] set font-bold as default under btn component

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,7 +1,7 @@
 @layer components {
 	.btn {
 		@apply inline-block align-middle text-center select-none
-				border font-normal rounded py-1 px-3 leading-normal;
+				border font-bold rounded py-1 px-3 leading-normal;
 
 		&-lg {
 			@apply py-g px-4 leading-tight;
