--- a/src/styles/components/_svgs.scss
+++ b/src/styles/components/_svgs.scss
@@ -1,8 +1,10 @@
-.svg {
-	// height: $font-size-base;
-	&--current-color {
-		path {
-			fill: currentColor;
+@layer components {
+	.svg {
+		@apply h-[1em];
+		&--current-color {
+			path {
+				fill: currentColor;
+			}
 		}
 	}
 }
