--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -10,5 +10,9 @@
 		&-primary {
 			@apply bg-primary text-white hover:bg-primary-dark;
 		}
+
+		&-outline-primary {
+			@apply bg-white border border-primary hover:bg-primary hover:text-white text-primary;
+		}
 	}
 }
