update modal separate as comp.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 // @import 'common';
 @import 'components/svgs';
 @import 'components/accordion';
+@import 'components/input';
 @import 'components/buttons';
 @import 'components/modal';
 @import 'components/custom-forms';
