--- a/src/styles/core/_type.scss
+++ b/src/styles/core/_type.scss
@@ -8,7 +8,7 @@ h3, .h3 {
 	@apply text-base font-bold;
 }
 h4, .h4 {
-	@apply text-base;
+	@apply text-base font-bold;
 }
 
 .hero-font-size {
@@ -38,7 +38,7 @@ h4, .h4 {
 		@apply text-lg font-bold;
 	}
 	h4, .h4 {
-		@apply text-lg;
+		@apply text-lg font-normal;
 	}
 	.font-size-dt-lg {
 		@apply text-lg;
