task/86ep0xf96 Playground

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,6 +46,7 @@
 // @import 'compounds/pdp-upsell';
 @import 'compounds/nav-mega-menu';
 
+@import 'sections/range-banner';
 @import 'sections/playground';
 @import 'sections/services-list';
 @import 'sections/instagram';
