--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -29,6 +29,14 @@
 			}
 		}
 
+		&__progress {
+			@apply rounded-[2px] h-[4px] my-1 w-full relative overflow-hidden;
+
+			&--scroll {
+				@apply absolute h-[4px] rounded-[2px] top-0 bottom-0;
+			}
+		}
+
 		&__lazy-load__spinner {
 			animation: loading 1.1s infinite linear;
 		}
