86ep0xf44 update Product Variant

--- a/src/styles/compounds/_product-variant.scss
+++ b/src/styles/compounds/_product-variant.scss
@@ -3,7 +3,7 @@
 		@apply w-full relative;
 
 		.custom-control-label {
-			@apply border-0 lg:border lg:border-gray-600 inline-block p-0 pl-[2em] lg:pl-[4.3125rem]
+			@apply border-0 lg:border lg:border-gray-600 inline-block p-0 pl-[2em] lg:pl-[4.313em]
 				relative mb-0 align-top  w-full lg:py-2 lg:pr-2 rounded before:top-0;
 
 			&::before {
