--- a/src/styles/sections/_testimonial.scss
+++ b/src/styles/sections/_testimonial.scss
@@ -1,7 +1,9 @@
 @layer components {
   .list-logo {
-      img {
-        max-height: calc-em(33);
-      }
+    .col-auto {
+      flex: 0 0 auto;
+      width: auto;
+      max-width: 100%;
     }
+  }
 }
