--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -14,5 +14,9 @@
 		&-outline-primary {
 			@apply bg-white border border-primary hover:bg-primary hover:text-white text-primary;
 		}
+
+		&-sm {
+			@apply sm:py-[.3125em]
+		}
 	}
 }
