task/86ep0xetq Svgs

--- a/src/styles/components/_svg.scss
+++ b/src/styles/components/_svg.scss
@@ -31,5 +31,6 @@
         -moz-border-radius: 0 0 3px 3px;
         border-radius: 0 0 3px 3px;
         color: #666;
+        line-height: 1.25;
     }
 }
