task/86ep0xerv Buttons

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,10 +1,10 @@
 @layer components {
 	.btn {
 		@apply inline-block align-middle text-center select-none
-				border font-bold rounded py-1 px-3 leading-normal;
+				border font-bold rounded-h py-[9px] px-[28px] leading-base;
 
 		&-lg {
-			@apply py-g px-4 leading-tight;
+			@apply rounded border-2 py-[13px] px-[54px] leading-base;
 		}
 
 		&-primary {
