[86ep0xf7q] update cart drawer

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,8 @@
 @import 'compounds/upsell';
 @import 'sections/testimonial';
 @import 'sections/sidebar';
+@import 'sections/cart-drawer';
+
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
 // @import 'compounds/newsletter-popup';
