86ep0xgu6 homepage update

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,7 +48,7 @@
 // @import 'compounds/pdp-upsell';
 @import 'compounds/nav-mega-menu';
 @import 'sections/howto';
-@import 'sections/playground';
+// @import 'sections/playground';
 @import 'sections/services-list';
 @import 'sections/instagram';
 // @import 'sections/yotpo-widget';
