--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -37,6 +37,25 @@
 			}
 		}
 
+		&__products .carousel__button {
+
+			span {
+				@apply lg:top-[8.125em] lg:w-4 lg:h-4;
+			}
+
+			svg {
+				@apply lg:w-[1.375em] lg:h-[1.375em];
+			}
+
+			&--prev span {
+				@apply lg:-left-[0.25em];
+			}
+
+			&--next span {
+				@apply lg:-right-[0.25em];
+			}
+		}
+
 		&__lazy-load__spinner {
 			animation: loading 1.1s infinite linear;
 		}
