86ep0xfa1 Sidebar carousel

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,7 +37,7 @@
 // @import 'compounds/result-card';
 @import 'compounds/upsell';
 @import 'sections/testimonial';
-@import 'sections/sidebar';
+// @import 'sections/sidebar';
 @import 'sections/cart-drawer';
 
 // @import 'compounds/birthday-popup';
