task/86ep0xgtk Blog Filtered

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -5,11 +5,12 @@
 		&:not(.link-search) {
 
 			&.active {
-				@apply text-body-color;
+				@apply text-primary;
 			}
 
 			&:hover {
 				text-decoration: none;
+				@apply text-primary;
 				path {
 					@apply text-primary;
 				}
