--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -1,86 +1,129 @@
-.tooltip {
-    position: absolute;
-	left: 0;
-	right: 0;
-	top: 100%;
-	transform: translateY(-100%);
-	transition: all 0.4s ease-in-out;
-	visibility: hidden;
+@layer components {
+    .tooltip {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        transform: translateY(-100%);
+        transition: all 0.4s ease-in-out;
 
-	@include media-breakpoint-up(lg) {
-		left: auto;
-		right: 0;
-	}
+        .arrow {
+            position: absolute;
+            display: block;
+            width: 1rem;
+            height: .5rem;
+            margin: 0 .5em;
+            @apply -bottom-hg;
+            left: 20px;
 
-	&:before {
-		content: '';
-		position: absolute;
-		border-style: solid;
-		border-width: 0 calc-em(11) calc-em(11) calc-em(11);
-		border-color: transparent transparent $primary transparent;
-		top: 0;
-		right: calc-em(10, 16);
-		transform: translateY(-90%);
-	}
+            &:before {
+                position: absolute;
+                display: block;
+                content: "";
+                border-color: transparent;
+                border-style: solid;
+                bottom: 0;
+                border-width: .5rem .5rem 0;
+                border-top-color: rgba(0, 0, 0, 0.25);
+            }
 
-	&--sold-out {
-		top: auto;
-		bottom: 2em;
-		z-index: 0;
-		left: 0;
-		transform: translateY(170%);
-
-		@include media-breakpoint-up(lg) {
-			left: auto;
-			right: 1.5em;
-		}
-
-		&:before {
-			content: '';
-			position: absolute;
-			border-style: solid;
-			border-width: calc-em(12) calc-em(12) 0 calc-em(12);
-			border-color: $secondary transparent transparent;
-			bottom: 0;
-			left: calc-em(10, 16);
-			transform: translateY(99%);
-			right: auto;
-
-			@include media-breakpoint-up(lg) {
-				left: auto;
-				right: calc-em(10, 16);
-			}
-		}
-
-		&.show {
-			animation-duration: 1s;
-			animation-name: tooltipBounceInUp;
-		}
-	}
-
-	@keyframes tooltipBounceInUp {
-		0% {
-			transform: translateY(170%);
-		}
-		60% {
-			transform: translateY(-25%);
-		}
-		100% {
-			transform: translateY(0);
-		}
-	}
-
-	.svg {
-		cursor: pointer;
-		position: absolute;
-		right: calc-em(10, 20);
-		top: 50%;
-		transform: translateY(-50%);
-		font-size: calc-em(19, 16);
-	}
-
-	&.show {
-		transform: translateY(0);
-		visibility: visible;
-	}
+            &:after {
+                position: absolute;
+                display: block;
+                content: "";
+                border-color: transparent;
+                border-style: solid;
+                bottom: 0;
+                border-width: .5rem .5rem 0;
+                border-top-color: #D62E55;
+            }
+        }
+     }
 }
+
+// .tooltip {
+//     position: absolute;
+// 	left: 0;
+// 	right: 0;
+// 	top: 100%;
+// 	transform: translateY(-100%);
+// 	transition: all 0.4s ease-in-out;
+// 	visibility: hidden;
+
+// 	@include media-breakpoint-up(lg) {
+// 		left: auto;
+// 		right: 0;
+// 	}
+
+// 	&:before {
+// 		content: '';
+// 		position: absolute;
+// 		border-style: solid;
+// 		border-width: 0 calc-em(11) calc-em(11) calc-em(11);
+// 		border-color: transparent transparent $primary transparent;
+// 		top: 0;
+// 		right: calc-em(10, 16);
+// 		transform: translateY(-90%);
+// 	}
+
+// 	&--sold-out {
+// 		top: auto;
+// 		bottom: 2em;
+// 		z-index: 0;
+// 		left: 0;
+// 		transform: translateY(170%);
+
+// 		@include media-breakpoint-up(lg) {
+// 			left: auto;
+// 			right: 1.5em;
+// 		}
+
+// 		&:before {
+// 			content: '';
+// 			position: absolute;
+// 			border-style: solid;
+// 			border-width: calc-em(12) calc-em(12) 0 calc-em(12);
+// 			border-color: $secondary transparent transparent;
+// 			bottom: 0;
+// 			left: calc-em(10, 16);
+// 			transform: translateY(99%);
+// 			right: auto;
+
+// 			@include media-breakpoint-up(lg) {
+// 				left: auto;
+// 				right: calc-em(10, 16);
+// 			}
+// 		}
+
+// 		&.show {
+// 			animation-duration: 1s;
+// 			animation-name: tooltipBounceInUp;
+// 		}
+// 	}
+
+// 	@keyframes tooltipBounceInUp {
+// 		0% {
+// 			transform: translateY(170%);
+// 		}
+// 		60% {
+// 			transform: translateY(-25%);
+// 		}
+// 		100% {
+// 			transform: translateY(0);
+// 		}
+// 	}
+
+// 	.svg {
+// 		cursor: pointer;
+// 		position: absolute;
+// 		right: calc-em(10, 20);
+// 		top: 50%;
+// 		transform: translateY(-50%);
+// 		font-size: calc-em(19, 16);
+// 	}
+
+// 	&.show {
+// 		transform: translateY(0);
+// 		visibility: visible;
+// 	}
+// }
