--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,8 @@
 @import 'components/buttons';
 @import 'components/modal';
 @import 'components/custom-forms';
+@import 'components/tooltip';
+
 // @import 'components/cookie-banner';
 // @import 'components/announcement-bar';
 // @import 'components/dropdown';
