update collection template for subcollections data

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,7 +59,7 @@
 
 // @import 'templates/article';
 @import 'templates/blog';
-// @import 'templates/collection';
+@import 'templates/collection';
 @import 'templates/stockist';
 // @import 'templates/sustainability';
 // @import 'templates/sweepstakes';
