Article Template Changes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@
 @import 'components/carousel';
 @import 'components/nav';
 @import 'components/swatch';
-// @import 'components/article-proggress-bar';
+@import 'components/article-proggress-bar';
 // @import 'components/badge';
 @import 'components/list';
 @import 'components/product-subscription';
