--- a/src/styles/components/_article-proggress-bar.scss
+++ b/src/styles/components/_article-proggress-bar.scss
@@ -1,20 +1,22 @@
-.reading-proggress-bar {
-	background-color: $secondary-light;
-	content: ' ';
-	height: calc-em(4);
-	top: 0;
-	z-index: $zindex-fixed;
+@layer components {
+	.reading-proggress-bar {
+		@apply bg-secondary-light;
+		content: ' ';
+		height: calc-em(4);
+		top: 0;
+		z-index: 1030;
 
-	&__proggress {
-		background-color: $secondary;
-		height: 100%;
-	}
+		&__proggress {
+			@apply bg-secondary;
+			height: 100%;
+		}
 
-	&--sticky {
-		transform: translateY(4em);
+		&--sticky {
+			transform: translateY(4em);
 
-		@include media-breakpoint-up(lg) {
-			transform: translateY(0.25em);
+			@screen lg {
+				transform: translateY(0.25em);
+			}
 		}
 	}
 }
