--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -45,6 +45,9 @@
 			@apply object-cover;
 		}
 	}
+	.search-panel-active:before {
+		@apply content-[''] h-full bg-[#000] z-[1020] w-full opacity-50 fixed;
+	}
 }
 
 @layer components {
