Real Result Template

--- a/src/styles/compounds/_result-card.scss
+++ b/src/styles/compounds/_result-card.scss
@@ -1,19 +1,7 @@
-.result-card {
-    img {
-      border-radius: $badge-border-radius $badge-border-radius 0 0;
-    }
-
-    svg {
-      fill: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
-    }
-
-    &.carousel-item {
-      & > div {
-        min-height: calc-em(430);
-      }
-    }
-
-    a {
-      text-decoration: underline;
+@layer components {
+  .result-card {
+    picture {
+      padding-top: percentage(214 / 300);
     }
   }
+}
