--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,7 @@
 // @import 'compounds/shop-article';
 // @import 'compounds/product-card-abtest';
 // @import 'compounds/product-card-cta-abtest';
-// @import 'compounds/result-card';
+@import 'compounds/result-card';
 @import 'compounds/upsell';
 @import 'sections/testimonial';
 // @import 'sections/sidebar';
