update for account dashboard

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -61,6 +61,7 @@
 @import 'templates/blog';
 @import 'templates/collection';
 @import 'templates/stockist';
+@import 'templates/loyalty';
 // @import 'templates/sustainability';
 // @import 'templates/sweepstakes';
 // @import 'templates/our-story';
