update cart item components

--- a/src/styles/sections/_cart-drawer.scss
+++ b/src/styles/sections/_cart-drawer.scss
@@ -5,7 +5,9 @@
 		}
 
 		.variant-swatch {
-			@apply border border-2 border-primary;
+			.selected {
+				@apply border-2 border-primary;
+			}
 		}
 
 		.manual-gwp {
