Blog Page feedback changes

--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -146,9 +146,9 @@
 		}
 	}
 
-	.badge {
-		min-width: calc-em(54);
-	}
+	// .badge {
+	// 	min-width: calc-em(54);
+	// }
 
 	.badge-blog a,
 	.badge-tag {
