--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,7 +44,7 @@
 
 // @import 'compounds/birthday-popup';
 // @import 'compounds/exit-intent';
-// @import 'compounds/newsletter-popup';
+@import 'compounds/newsletter-popup';
 // @import 'compounds/sweepstakes-popup';
 // @import 'compounds/cookies-popup';
 // @import 'compounds/pdp-upsell';
