86epapwdt implement user context & item redemption

--- a/src/styles/templates/_loyalty.scss
+++ b/src/styles/templates/_loyalty.scss
@@ -3,6 +3,10 @@
 		p, div {
 			line-height: normal !important;
 		}
+		.yotpo-widget-campaign-widget-icon-container .yotpo-widget-campaign-widget-custom-icon {
+			margin-left: auto;
+			margin-right: auto;
+		}
 		.yotpo-widget-instance-container:nth-child(1),
 		.yotpo-widget-instance-container:nth-child(2),
 		.yotpo-widget-instance-container:nth-child(6) {
