--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,6 +63,6 @@
 @import 'templates/stockist';
 @import 'templates/loyalty';
 // @import 'templates/sustainability';
-// @import 'templates/sweepstakes';
+@import 'templates/sweepstakes';
 // @import 'templates/our-story';
 // @import 'templates/product';
