--- a/src/styles/templates/_sweepstakes.scss
+++ b/src/styles/templates/_sweepstakes.scss
@@ -1,36 +1,39 @@
-.sweepstakes {
+@layer components {
+	.sweepstakes {
 
-	&__country-label .svg {
-		font-size: calc-em(10, 16);
-		margin-left: calc-em(10, 16);
-	}
-
-	&__success {
-		@include media-breakpoint-up(lg) {
-			min-height: calc-em(925, 16);
+		&__country-label .svg {
+			font-size: calc-em(10, 16);
+			margin-left: calc-em(10, 16);
 		}
-	}
 
-	.input-group-addon + input {
-		flex-basis: 55%;
-
-		@include media-breakpoint-up(xl) {
-			flex-basis: 65%;
+		&__success {
+			@screen lg {
+				min-height: calc-em(925, 16);
+			}
 		}
-	}
 
-	select {
-		opacity: 0;
-	}
+		.input-group-addon + input {
+			flex-basis: 55%;
 
-	.btn-primary[disabled] {
-		background-color: $gray-500;
-		border-color: $gray-500;
-	}
+			@screen xl {
+				flex-basis: 65%;
+			}
+		}
 
-	&__content {
-		@include media-breakpoint-down(lg) {
+		select {
+			opacity: 0;
+		}
+
+		.btn-primary[disabled] {
+			@apply bg-gray-500; 
+			@apply border-gray-500;
+		}
+
+		&__content {
 			padding-top: calc-em(250);
+			@screen lg {
+				padding-top: 0;
+			}
 		}
 	}
 }
