--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -134,7 +134,7 @@
 		}
 	}
 
-	.yotpo-title-text, .yotpo-vip-tier-name, .yotpo-headline, .yotpo-description, .yotpo-redemption-reward {
+	div, p, .yotpo-container-headline, .yotpo-title-text, .yotpo-vip-tier-name, .yotpo-headline, .yotpo-description, .yotpo-redemption-reward {
 		line-height: normal;
 	}
 }
