Headless Feedback Changes

--- a/src/styles/compounds/_newsletter-popup.scss
+++ b/src/styles/compounds/_newsletter-popup.scss
@@ -99,8 +99,8 @@
             }
         }
 
-        @screen xl {
-            right: calc((100% - 960px) / 2 + 22.5px);
-        }
+        // @screen xl {
+        //     right: calc((100% - 960px) / 2 + 22.5px);
+        // }
     }
 }
