--- a/src/styles/compounds/_newsletter-popup.scss
+++ b/src/styles/compounds/_newsletter-popup.scss
@@ -103,4 +103,8 @@
         //     right: calc((100% - 960px) / 2 + 22.5px);
         // }
     }
+
+    .modal-content {
+        border: 1px solid rgba(0, 0, 0, .2);
+    }
 }
