update line height

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -141,6 +141,10 @@
 	div, p, .yotpo-container-headline, .yotpo-title-text, .yotpo-vip-tier-name, .yotpo-headline, .yotpo-description, .yotpo-redemption-reward {
 		line-height: normal;
 	}
+
+	.yotpo-vip-current-status-text {
+		line-height: 26px;
+	}
 }
 
 afterpay-placement {
