--- a/src/styles/components/_custom-forms.scss
+++ b/src/styles/components/_custom-forms.scss
@@ -11,7 +11,7 @@
     display: inline-block;
     width: 100%;
     height: 3.125rem;
-    padding: .875em 2em 0.875em 1em;
+    padding: .875em 2em 0.875em 15px;
     font-size: 1em;
     font-weight: 400;
     line-height: 1.25;
@@ -162,7 +162,7 @@
       display: inline-block;
       width: 100%;
       height: 3.125rem;
-      padding: .875em 2em 0.875em 1em;
+      padding: .875em 2em 0.875em 15px;
       font-size: 1em;
       font-weight: 400;
       line-height: 1.25;
