--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -138,6 +138,12 @@
 		// }
 	}
 
+	.article-list-wrapper {
+		.embed-responsive {
+			padding-top: calc(100% / 828* 420);
+		}
+	}
+
 	.article__content {
 		img, iframe {
 			max-width: 100%;
@@ -160,7 +166,7 @@
 	.badge-tag {
 		line-height: 1.25em;
     	padding: .125em .5em;
-		margin-right: calc-em(4, 12);
+		margin-right: 0.25em;
 	}
 
 	.blog-nav-tags {
