--- a/src/styles/templates/_blog.scss
+++ b/src/styles/templates/_blog.scss
@@ -156,6 +156,15 @@
 				width: auto;
 			}
 		}
+
+		h1,
+		h2,
+		h3,
+		h4,
+		h5,
+		h6 {
+			line-height: 1.25 !important;
+		}
 	}
 
 	// .badge {
