--- a/src/styles/sections/_howto.scss
+++ b/src/styles/sections/_howto.scss
@@ -10,6 +10,7 @@
 		.carousel__button {
 			&--direction {
 				@apply mb-position lg:dk-position;
+				box-shadow: 0 6.5px 8px #15151529;
 			}
 		}
 	}
